
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="20dp"
        tools:context="unsri.ptba.assetmanagement.Features.CreateAsset.AssetCreateDialogFragment">

        <TextView
            android:id="@id/dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tambah Asset Baru"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/text_dark"
            android:paddingBottom="20dp"
            />

        <TextView
            android:id="@id/assetNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asset_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogTitle"
            android:textStyle="bold"
            android:textColor="@color/text_semidark"
            android:paddingBottom="3dp"
            />

        <EditText
            android:id="@+id/assetNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assetNameTitle"
            android:inputType="text"
            android:padding="10dp"
            android:background="@drawable/edittext_primary"/>

        <TextView
            android:id="@id/assetSnTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assetSn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assetNameEditText"
            android:textStyle="bold"
            android:textColor="@color/text_semidark"
            android:paddingBottom="3dp"
            android:layout_marginTop="15dp"
            />

        <EditText
            android:id="@+id/assetSnEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assetSnTitle"
            android:inputType="text"
            android:padding="10dp"
            android:background="@drawable/edittext_primary"/>

        <ImageView
            android:id="@+id/addSnImage"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:alpha="0.5"
            android:src="@drawable/ic_camera_solid"
            app:layout_constraintRight_toRightOf="@+id/assetSnEditText"
            app:layout_constraintTop_toBottomOf="@+id/assetSnTitle"
            />

        <TextView
            android:id="@id/assetTagTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assetTag"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assetSnEditText"
            android:textStyle="bold"
            android:textColor="@color/text_semidark"
            android:paddingBottom="3dp"
            android:layout_marginTop="15dp"
            />

        <EditText
            android:id="@+id/assetTagEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assetTagTitle"
            android:inputType="text"
            android:padding="10dp"
            android:background="@drawable/edittext_primary"/>

        <ImageView
            android:id="@+id/addTagImage"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:alpha="0.5"
            android:src="@drawable/ic_camera_solid"
            app:layout_constraintRight_toRightOf="@+id/assetTagEditText"
            app:layout_constraintTop_toBottomOf="@+id/assetTagTitle"
            />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/assetTagEditText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/createButton"
            android:text="@string/cancel_button"
            android:background="@drawable/rec_btn_secondary"
            android:textColor="@color/text_primary"
            android:layout_marginTop="30dp"
            android:layout_marginRight="7.5dp"
            />

        <Button
            android:id="@+id/createButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/assetTagEditText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/cancelButton"
            android:text="@string/create_button"
            android:background="@drawable/rec_btn_primary"
            android:textColor="@color/bg_light"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="7.5dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>